# eso-data

./: .gitignore  README.md  pyproject.toml
docs/: gps_session.py  mermaid-records_column_mapping.md  mermaid-records_column_mapping_01.md  nearest_neighbor_session_binning.md  vit2tbl_hdr.txt  vit2tbl_product_design.md
reports/: eso_locations_comparison.md
scripts/: build_esoloc.py  build_location_tables.py  compare.md  compare_eso_locations.py  compare_esoloc.py  inspect_vit2tbl_inputs.py
tests/: test_build_esoloc.py  test_build_location_tables.py  test_compare_esoloc.py
