[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eso-data"
version = "0.1.0"
description = "EarthScope-Oceans data product scripts"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
